# deimos

./: .gitignore  CMakeLists.txt  Deimos.cmake  README.md  Sample_01.cmake  todo.md
include/: Render.hpp  Sprite.hpp  Texture.hpp  VBO.hpp  Window.hpp
include/Deimos/: AnimatedSprite.hpp  GraphicDefs.hpp  Matrix.hpp  Mesh.hpp  OpenglErrorChecker.hpp  Renderable.hpp  Renderer.hpp  Scene.hpp  SceneManager.hpp  Sprite.hpp  Texture.hpp  VBO.hpp  Vector.hpp  Vertex.hpp  Window.hpp
project/visual13_SDL/: Deimos.sln
project/visual13_SDL/Core/: Core.vcxproj  Core.vcxproj.filters
project/visual13_SDL/Sample_01/: Sample_01.vcxproj  Sample_01.vcxproj.filters
src/Core/: AnimatedSprite.cpp  Matrix.cpp  Mesh.cpp  Render.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Sprite.cpp  Texture.cpp  VBO.cpp  Window.cpp
src/Deimos/: Texture.cpp  main.cpp
src/Sample_01/: Console.h  Player.cpp  Player.hpp  Render.cpp  Render.hpp  main.cpp
